--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <p>Recently, I have moved to Denmark to study <b>Multimedia Design </b>at <i>Business Academy Aarhus</i>.
 
-    <p>As a <i>Communication Specialist</i>, graduated in Media Studies, I have experience in the Journalism field by training and working at a weekly news magazine. <a href="https://www.sabado.pt/mundo/detalhe/vai-um-copo-de-vinho-azul-conheca-o-novo-cocktail-espanhol/">Check</a> here one of my articles (portuguese version).
+    <p>As a <i>Communication Specialist</i>, graduated in Media Studies, I have experience in the Journalism field by training and working at a weekly news magazine. <a href="https://www.sabado.pt/mundo/detalhe/vai-um-copo-de-vinho-azul-conheca-o-novo-cocktail-espanhol/" target="_blank">Check</a> here one of my articles (portuguese version).
 
 <article>
     <h2><strong>Interests</strong></h2>
