--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <p><h2><strong>Things I enjoy</strong></h2>
 
-<p><a href="https://www.youtube.com/watch?time_continue=61&v=GU5W1LecyXw" target="_blank">
+<p><a href="https://youtu.be/GU5W1LecyXw" target="_blank">
  <img src="beach.jpg" alt="beach" width="200" height="300">
 </a>
 <a href="https://www.youtube.com/watch?v=KIJh_76qu0Y" target="_blank">
